Blackpurl/src/objects/Other_Charges__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Other Charges</relationshipLabel>
        <relationshipName>Other_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Taxable__c</fullName>
        <formula>Fee__r.Taxable__c</formula>
        <label>Is Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Desc__c</fullName>
        <formula>Item_Code__c  &amp; &apos; - &apos; &amp; Item_Description__c</formula>
        <label>Item/Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Percent__c</fullName>
        <label>Tax Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoicing_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoicing Header</label>
        <referenceTo>Vendor_Invoicing_Header__c</referenceTo>
        <relationshipLabel>Other Charges</relationshipLabel>
        <relationshipName>Other_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Other Charges</label>
    <nameField>
        <displayFormat>OC-{00000000}</displayFormat>
        <label>Other Charges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>